--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,7 +19,7 @@
 </ion-list>
   <ion-fab right bottom (click)="showItem()">
     <button ion-fab color="primary">
-      <ion-icon name="md-add"></ion-icon>
+      <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
 </ion-content>
